test/tests/compiler/18_structures/invalid_parse/extra_credit/union_decl_empty_member_list.plx
# union member list cannot be empty
# (note that GCC/Clang allow this as an extenision)
type union s ()

pub fn main(none) i32 {
    return 0
}
